advance de repositorio 3

--- a/portafolio.html
+++ b/portafolio.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/style.css">
     <title>tarea 2</title>
 
@@ -13,7 +14,7 @@
 <body>
 
     <header class="header">
-        <nav class="header-navigation">
+        <nav class="header-navigation container">
             <a href="./portafolio.html" class="header-home link current">
                 <span class="logo-blue"> WebStudio</span>
             </a>
@@ -46,58 +47,63 @@
             <li><button type="button" class="button-chang"> Marketing </button></li>
         </ul>
         <main>
-            <section class="team">
-                <ul class="team-lista">
+            <section class="team container">
+                <div class="container">
+                    <ul class="team-lista">
 
-                    <li class="team-imag">
-                        <img src="./images/Tecnoduck_4.jpg" alt="Sitio-web" width="370" height="294" />
+                        <li class="team-imag">
+                            <img src="./images/Tecnoduck_4.jpg" alt="Sitio-web" width="370" height="294" />
+                            <h3 class=" team-diseño"> Tecnoduck </h3>
+                            <p class="team-profec"> Sitio-web </p>
+                        </li>
 
-                    </li>
-                    <h3 class=" team-diseño"> Tecnoduck </h3>
-                    <p class="team-profec"> Sitio-web </p>
 
-                    <li class=" team-imag  "> <img src="./images/Póster_de_Nueva Orleans_vs_Estrella Dorada.jpg"
-                            alt="Diseño" width="370" height="294" />
-                        <h3 class="team-diseño">Póster de Nueva Orleans vs Estrella Dorada </h3>
-                        <p class="team-profec">Diseño</p>
-                    </li>
-                    <li class="team-imag"><img src="./images/Restaurante_Seafood.jpg" alt="Aplicaciones" width="370"
-                            height="294" />
-                        <h3 class="team-diseño">Restaurante Seafood </h3>
-                        <p class="team-profec"> Aplicaciones</p>
-                    </li>
-                    <li class="team-imag"><img src="./images/Proyecto_Prime.jpg" alt="Marketing" width="370"
-                            height="294" />
-                        <h3 class="team-diseño">Proyecto Prime </h3>
-                        <p class="team-profec"> Marketing</p>
-                    </li>
-                    <li class="team-imag"><img src="./images/Proyecto_Cajas.jpg" alt="Aplicaciones" width="370"
-                            height="294" />
-                        <h3 class="team-diseño">Proyecto Cajas</h3>
-                        <p class="team-profec">Aplicaciones </p>
-                    </li>
-                    <li class="team-imag"><img src="images/La_inspiración_no_tiene_límites.jpg" alt="Sitio-web"
-                            width="370" height="294" />
-                        <h3 class="team-diseño">La inspiración no tiene límites </h3>
-                        <p class="team-profec"> Sitio-web </p>
-                    </li>
-                    <li class="team-imag"><img src="./images/Edición_Limitada.jpg" alt="Diseño" width="370"
-                            height="294" />
-                        <h3 class="team-diseño">Edición Limitada </h3>
-                        <p class="team-profec">Diseño </p>
-                    </li>
+                        <li class=" team-imag  "> <img src="./images/Póster_de_Nueva Orleans_vs_Estrella Dorada.jpg"
+                                alt="Diseño" width="370" height="294" />
+                            <h3 class="team-diseño">Póster de Nueva Orleans vs Estrella Dorada </h3>
+                            <p class="team-profec">Diseño</p>
+                        </li>
+                        <li class="team-imag"><img src="./images/Restaurante_Seafood.jpg" alt="Aplicaciones" width="370"
+                                height="294" />
+                            <h3 class="team-diseño">Restaurante Seafood </h3>
+                            <p class="team-profec"> Aplicaciones</p>
+                        </li>
+                        <li class="team-imag"><img src="./images/Proyecto_Prime.jpg" alt="Marketing" width="370"
+                                height="294" />
+                            <h3 class="team-diseño">Proyecto Prime </h3>
+                            <p class="team-profec"> Marketing</p>
+                        </li>
+                        <li class="team-imag"><img src="./images/Proyecto_Cajas.jpg" alt="Aplicaciones" width="370"
+                                height="294" />
+                            <h3 class="team-diseño">Proyecto Cajas</h3>
+                            <p class="team-profec">Aplicaciones </p>
+                        </li>
+                        <li class="team-imag"><img src="images/La_inspiración_no_tiene_límites.jpg" alt="Sitio-web"
+                                width="370" height="294" />
+                            <h3 class="team-diseño">La inspiración no tiene límites </h3>
+                            <p class="team-profec"> Sitio-web </p>
+                        </li>
+                        <li class="team-imag"><img src="./images/Edición_Limitada.jpg" alt="Diseño" width="370"
+                                height="294" />
+                            <h3 class="team-diseño">Edición Limitada </h3>
+                            <p class="team-profec">Diseño </p>
+                        </li>
 
-                    <li class="team-imag"><img src="images/Proyect_LAB.jpg" alt="Marketing" width="370" height="294" />
-                        <h3 class="team-diseño"> Proyect LAB </h3>
-                        <p class="team-profec">Marketing</p>
+                        <li class="team-imag"><img src="images/Proyect_LAB.jpg" alt="Marketing" width="370"
+                                height="294" />
+                            <h3 class="team-diseño"> Proyect LAB </h3>
+                            <p class="team-profec">Marketing</p>
 
-                    </li>
-                    <li class="team-imag"><img src="./images/Negocio_en_Crecimiento.jpg" alt="Aplicaciones" width="370"
-                            height="294" />
-                        <h3 class="team-diseño">Negocio en Crecimiento </h3>
-                        <p class="team-profec">Aplicaciones </p>
-                    </li>
-                </ul>
+                        </li>
+                        <li class="team-imag"><img src="./images/Negocio_en_Crecimiento.jpg" alt="Aplicaciones"
+                                width="370" height="294" />
+                            <h3 class="team-diseño">Negocio en Crecimiento </h3>
+                            <p class="team-profec">Aplicaciones </p>
+                        </li>
+                    </ul>
+
+                </div>
+
             </section>
         </main>
 
